--- a/pagina2/second-page.html
+++ b/pagina2/second-page.html
@@ -15,7 +15,7 @@
             <a><img src="countstar.svg" alt="Contando Estrelas" id="count-star"></a>
         </div>
         <div class="texto1">
-            <h2>I Would Count Every Star In The Universe For You</h2>
+            <h2>I would count every star in the universe for you</h2>
         </div>
         <div class="box">
             <a href="pagina3/index.html"><button class="button">NEXT</button></a>
