--- a/pagina2/pagina3/pagina4/index.html
+++ b/pagina2/pagina3/pagina4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esse é meu coração pra você!</title>
+    <title>Do fundo do meu coração!</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@1&family=Josefin+Sans:ital,wght@1,600&family=Libre+Baskerville:wght@700&family=Noto+Sans:ital,wght@1,500&display=swap');
